Update the badges for valid HTML.

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -47,6 +47,16 @@ h2.dep_header{
   color: $text_casual;
   font-size: 14px;
   font-weight: normal;
+  display: inline;
+}
+
+h5.dep_header{
+  padding: 0;
+  margin: 10px 0;
+  color: $text_casual;
+  font-size: 14px;
+  font-weight: normal;
+  display: inline;
 }
 
 
