--- a/app/views/products/_product_show_dependencies_maven2.html.erb
+++ b/app/views/products/_product_show_dependencies_maven2.html.erb
@@ -3,29 +3,31 @@
   <% main_dependencies = @product.dependencies(nil) %>
 
   <div class="row">
-  	<div class="col-md-12">
-  		<h5 class="dep_header">
+    <div class="col-md-12">
+      <h5 class="dep_header">
         <% if main_dependencies && main_dependencies.count %>
-  			  <%= pluralize( main_dependencies.count, 'Compile Dependencies') %>
+          <%= pluralize( main_dependencies.count, 'Compile Dependencies') %>
         <% else %>
           0 compile dependencies found
         <% end %>
+      </h5>
+      <div style="display: inline;">
         <%= render :partial => "shared/dependency_badge", :locals => { :project => @product } %>
-  		</h5>
-  	</div>
-  	<div class="col-md-12" >
-  		<% if main_dependencies.count > 0 && main_dependencies.count <= 30 %>
+      </div>
+    </div>
+    <div class="col-md-12" >
+      <% if main_dependencies.count > 0 && main_dependencies.count <= 30 %>
         <%= render :partial => "products/helpers/dependency_table", :locals => { :dependencies => main_dependencies }  %>
       <% elsif main_dependencies.count > 30 %>
         Because of performance reasons we can not show all <%= pluralize(main_dependencies.count, "compile dependencies") %> here. <%= main_dependencies.count %>
       <% end %>
-  	</div>
+    </div>
   </div>
 
   <% test_deps = @product.dependencies( Dependency::A_SCOPE_TEST ) %>
   <% if test_deps && test_deps.count > 0 %>
-  	<hr/>
-  	<h5 class="dep_header">
+    <hr/>
+    <h5 class="dep_header">
       <%= pluralize(test_deps.count, "Test Dependencies") %>
     </h5>
     <%= render :partial => "products/helpers/dependency_table", :locals => { :dependencies => test_deps }  %>
@@ -33,8 +35,8 @@
 
   <% provided_deps = @product.dependencies( Dependency::A_SCOPE_PROVIDED ) %>
   <% if provided_deps && provided_deps.count > 0 && provided_deps.count <= 30 %>
-  	<hr />
-  	<h5 class="dep_header">
+    <hr />
+    <h5 class="dep_header">
       <%= pluralize(provided_deps.count, "Provided Dependencies") %>
     </h5>
     <%= render :partial => "products/helpers/dependency_table", :locals => { :dependencies => provided_deps }  %>
