--- a/app/views/products/_product_show_dependencies_packagist.html.erb
+++ b/app/views/products/_product_show_dependencies_packagist.html.erb
@@ -5,9 +5,11 @@
 <div class="row">
   <div class="col-md-12">
     <h5 class="dep_header">
-      <%= pluralize( main_dependencies.count, 'Require Dependencies') %> 
-      <%= render :partial => "shared/dependency_badge", :locals => { :project => @product } %>
+      <%= pluralize( main_dependencies.count, 'Require Dependencies') %>
     </h5>
+    <div style="display: inline;">
+      <%= render :partial => "shared/dependency_badge", :locals => { :project => @product } %>
+    </div>
   </div>
   <div class="col-md-12" >
     <% if !main_dependencies.empty? %>
