--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -67,13 +67,7 @@
           </li>
 
           <li>
-            <%= link_to "I follow",  :controller => 'user/packages', :action => "i_follow", :rel => "nofollow" %>
-          </li>
-
-          <li>
-            <a href="<%= user_projects_path %>" title="Projects">
-              <i class="fa fa-list-ol"></i>
-            </a>
+            <a href="<%= user_projects_path %>" title="Projects">Projects</a>
           </li>
 
           <li>
