--- a/app/views/user/helpers/_navi.html.erb
+++ b/app/views/user/helpers/_navi.html.erb
@@ -13,7 +13,7 @@
     <div class="navi nav-stacked" >
       <% if signed_in? %>
       <ul class = "nav nav-pills nav-stacked">
-        <li><%= link_to 'My Projects', user_projects_path, id: 'my_projects', :rel => "nofollow" %></li>
+        <li><%= link_to 'Projects', user_projects_path, id: 'my_projects', :rel => "nofollow" %></li>
 
         <% if Rails.env.enterprise? %>
           <li><%= link_to 'All Public Projects', user_projects_path(:all_public => true), id: 'all_public_projects', :rel => "nofollow" %></li>
