--- a/app/views/settings/payments/index.html.erb
+++ b/app/views/settings/payments/index.html.erb
@@ -8,7 +8,34 @@
   </div>
 
   <div class="content" >
-    <div id = "payment_history">Iniatilizing ...</div>
-    <%= render :partial => "/settings/payments/helpers/stripe_payment_history" %>
+    <% if @invoices.nil? || @invoices.empty? %>
+      You don't have any payment history.
+    <% else %>
+      <table id="invoice_table" class="table table-hover">
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Plan</th>
+            <th>Amount</th>
+            <th>Receipt</th>
+          </tr>
+        </thead>
+        <tbody>
+        <% @invoices.each do |invoice| %>
+          <% next if invoice.total.to_i == 0 %>
+          <tr>
+            <td><%= Time.at( invoice.invoice_date ).to_date %></td>
+            <td>
+              <% if !invoice.receipt_lines.to_a.empty? %>
+                <%= invoice.receipt_lines.first.plan_name %>
+              <% end %>
+            </td>
+            <td><%= sprintf('%.2f', (invoice.total.to_f / 100) ) %> <%= invoice.currency.upcase %> </td>
+            <td><a href="/settings/receipt/<%= invoice.invoice_id %>"><%= invoice.filename %></a></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    <% end %>
   </div>
 </div>
