--- a/app/views/settings/payments/index.html.erb
+++ b/app/views/settings/payments/index.html.erb
@@ -28,6 +28,8 @@
             <td>
               <% if !invoice.receipt_lines.to_a.empty? %>
                 <%= invoice.receipt_lines.first.plan_name %>
+              <% else %>
+                Mixed
               <% end %>
             </td>
             <td><%= sprintf('%.2f', (invoice.total.to_f / 100) ) %> <%= invoice.currency.upcase %> </td>
