Show security alerts for NPM packages.

--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -176,3 +176,15 @@ h3.side_header{
   border-left: 0px;
   border-right: 0px;
 }
+
+.security_alert{
+  margin-bottom: 20px;
+}
+
+.security_alert h2{
+  color: black;
+}
+
+.label_bold{
+  font-weight: bold;
+}
