--- a/app/views/shared/_feature_security.html.erb
+++ b/app/views/shared/_feature_security.html.erb
@@ -7,12 +7,12 @@
             <div class="clearfix"></div>
             <h2 class="section-heading">Security Notifications</h2>
             <p class="lead">
-                Nowadays software projects are based on many open source 
-libraries! How do you ensure that you are not using dependencies which has 
-security vulnerabilities? You don't! VersionEye is checking multiple security databases 
-every day and knows which artifacts are vulnerable. VersionEye can monitor your project and send you security 
+                Nowadays software projects are based on many open source
+libraries! How do you ensure that you are not using dependencies which has
+security vulnerabilities? You don't! VersionEye is checking multiple security databases
+every day and knows which artifacts are vulnerable. VersionEye can monitor your project and send you security
 notifications if one of your dependencies has a known security vulnerability. <br/>
-This feature currently only works for PHP. 
+This feature currently only works for PHP and Node.JS.
             </p>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6" style="text-align: center; vertical-aligne: middle; padding-top: 100px;">
