--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -143,7 +143,9 @@
           <li>
             <a data-target="#licenses" data-toggle="tab" onclick="page_view('ga_project_licenses')"><i class = "fa fa-tasks">&nbsp;</i>Licenses</a>
           </li>
-          <% if @project.language.eql?(Product::A_LANGUAGE_PHP) || @project.language.eql?(Product::A_LANGUAGE_NODEJS) %>
+          <% if @project.language.eql?(Product::A_LANGUAGE_PHP) ||
+                @project.language.eql?(Product::A_LANGUAGE_NODEJS) ||
+                @project.language.eql?(Product::A_LANGUAGE_RUBY) %>
             <li>
               <a data-target="#security" data-toggle="tab" onclick="page_view('ga_project_security')"><i class = "fa fa-tasks">&nbsp;</i>Security</a>
             </li>
@@ -180,7 +182,9 @@
 
           </div>
 
-          <% if @project.language.eql?(Product::A_LANGUAGE_PHP) || @project.language.eql?(Product::A_LANGUAGE_NODEJS) %>
+          <% if @project.language.eql?(Product::A_LANGUAGE_PHP) ||
+                @project.language.eql?(Product::A_LANGUAGE_NODEJS) ||
+                @project.language.eql?(Product::A_LANGUAGE_RUBY) %>
             <div id="security" class="tab-pane">
 
               <%= render partial: "user/projects/helpers/show_subprojects", locals: {parent_project: @project, child_project: @child, tab_id: 'security'} %>
