Add warranty hint to security tab.

--- a/app/views/user/projects/helpers/_security_items.html.erb
+++ b/app/views/user/projects/helpers/_security_items.html.erb
@@ -31,6 +31,6 @@
 
   <% if no_security_alerts == true %>
     <div class="alert falsh success">
-      There are no known security vulnerabilities.
+      There are no known security vulnerabilities. THIS REPORT IS WITHOUT ANY WARRANTY!
     </div>
   <% end %>
