--- a/app/assets/stylesheets/marketing.scss
+++ b/app/assets/stylesheets/marketing.scss
@@ -23,7 +23,7 @@
 }
 
 h5.marketing {
-  color: $text_yellow;
+  color: black;
   font-family: "Droid Sans";
   margin: 0px 0px 20px 0px;
   text-align: left;
