--- a/app/assets/stylesheets/application_enterprise.scss
+++ b/app/assets/stylesheets/application_enterprise.scss
@@ -11,10 +11,7 @@ $gradient_start: #7F0200;
 $gradient_end: #610003;
 $link_color: #7575FF;
 
-/* $text_yellow: #FBB21C; */
-
-$text_yellow: black;
-$text_casual: black;  /* #616970 */
+$text_casual: black;
 
 $link_hover:   #FBB21C;
 $link_color:   #FDFDFD;
