Fix anchor tags.

--- a/app/views/products/_product_show_dependencies.html.erb
+++ b/app/views/products/_product_show_dependencies.html.erb
@@ -1,4 +1,5 @@
 
+<a name="dependencies"></a>
 <h2 class="section_header">
   Dependencies <a class="octicon-link" href="#dependencies"><i class="fa fa-link"></i></a>
 </h2>
