--- a/app/views/products/_product_show_description.html.erb
+++ b/app/views/products/_product_show_description.html.erb
@@ -1,5 +1,6 @@
 <% if (@product.description && !@product.description.empty?) || (@product.description_manual && !@product.description_manual.empty?) %>
 
+  <a name="description"></a>
   <h2 class="section_header">
     Description <a class="octicon-link" href="#description"><i class="fa fa-link"></i></a>
   </h2>
