--- a/app/views/products/_product_show_maven_code_snippet.html.erb
+++ b/app/views/products/_product_show_maven_code_snippet.html.erb
@@ -1,4 +1,5 @@
 
+<a name="code_snippet"></a>
 <h2 class="section_header">
   Maven <a class="octicon-link" href="#code_snippet"><i class="fa fa-link"></i></a>
 </h2>
