--- a/app/views/products/_product_show_scm_changelogs.html.erb
+++ b/app/views/products/_product_show_scm_changelogs.html.erb
@@ -3,6 +3,7 @@
   <% p scm_changelogs.count %>
   <% if scm_changelogs && !scm_changelogs.empty? %>
 
+    <a name="scm_changelogs"></a>
     <h2 class="section_header" id='scm_changelogs'>
       SCM Changelogs <a class="octicon-link" href="#scm_changelogs"><i class="fa fa-link"></i></a>
     </h2>
