--- a/app/views/products/helpers/_kpi_summary.html.erb
+++ b/app/views/products/helpers/_kpi_summary.html.erb
@@ -1,3 +1,4 @@
+<a name="summary"></a>
 <h2 class="section_header">
   Summary <a class="octicon-link" href="#summary"><i class="fa fa-link"></i></a>
 </h2>
