--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -5,6 +5,7 @@
     <a href="/pricing">Pricing</a> |
     <%= link_to 'Enterprise', enterprise_path %> |
     <a href="/faq">FAQs</a> |
+    <a href="/documentation">Documentation</a> |
     <%= link_to t(:page_footer_statistics), statistics_path %> |
     <a href="https://bitbucket.org/versioneye/versioneye/issues" id="feedback_footer" target="issue_tracker_74" >Feedback</a> |
     <a href="http://blog.versioneye.com/" target="versioneye_blog">Blog</a> |
