--- a/app/views/products/_product_show_pip.html.erb
+++ b/app/views/products/_product_show_pip.html.erb
@@ -4,6 +4,7 @@
 </div>
 
 <div class="col-md-9 col-sm-8 content_head_top" >
+  <%= render 'products/helpers/security_vulnerabilities' %>
   <%= render 'products/product_show_description' %>
   <%= render 'products/helpers/product_show_keywords' %>
   <%= render 'products/product_show_downloads' %>
