Add files for chef.

--- a/app/views/products/_product_show_dependencies.html.erb
+++ b/app/views/products/_product_show_dependencies.html.erb
@@ -13,7 +13,8 @@
       "#{Project::A_TYPE_BOWER}"     => 'product_show_dependencies_bower',
       "#{Project::A_TYPE_COMPOSER}"  => 'product_show_dependencies_packagist',
       "#{Project::A_TYPE_COCOAPODS}" => 'products/cocoapods/product_show_dependencies',
-      "#{Project::A_TYPE_BIICODE}"   => 'product_show_dependencies_biicode'
+      "#{Project::A_TYPE_BIICODE}"   => 'product_show_dependencies_biicode',
+      "#{Project::A_TYPE_CHEF}"      => 'product_show_dependencies_chef'
     }
 
     partial = partial_map[@product.prod_type]
