--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,7 +16,8 @@
       "#{Project::A_TYPE_GITHUB}"    => 'products/product_show_github',
       "#{Project::A_TYPE_COCOAPODS}" => 'products/product_show_cocoapods',
       "#{Project::A_TYPE_BIICODE}"   => 'products/product_show_biicode',
-      "#{Project::A_TYPE_BOWER}"     => 'products/product_show_bower'
+      "#{Project::A_TYPE_BOWER}"     => 'products/product_show_bower',
+      "#{Project::A_TYPE_CHEF}"      => 'products/product_show_chef'
     } %>
 
     <% if ["Java", "Clojure"].member? @product.language %>
