--- a/app/views/settings/license_whitelists/index.html.erb
+++ b/app/views/settings/license_whitelists/index.html.erb
@@ -31,8 +31,8 @@
 
     <table>
       <colgroup>
-        <col width="75px;"j />
-        <col width="120px;"j />
+        <col width="75px;" />
+        <col width="120px;" />
         <col width="*" />
       </colgroup>
 
