--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -28,6 +28,7 @@
             <li><%= link_to 'License Whitelists'  , settings_license_whitelists_path,   :rel => "nofollow" %></li>
             <li><%= link_to 'Component Whitelists', settings_component_whitelists_path, :rel => "nofollow" %></li>
             <li><%= link_to 'users'              , users_path, :rel => "nofollow" %></li>
+            <li><%= link_to 'Teams'              , settings_teams_path   , :rel => "nofollow" %></li>
             <hr/>
             <li><%= link_to 'Maven Repository'   , settings_mvnrepos_path , :rel => "nofollow" %></li>
             <li><%= link_to 'Satis Repository'   , settings_satis_path    , :rel => "nofollow" %></li>
@@ -48,6 +49,7 @@
               <li><%= link_to 'Plans & Pricing'    , settings_plans_path   , :rel => "nofollow" %></li>
               <li><%= link_to 'Payment History'    , settings_payments_path, :rel => "nofollow" %></li>
               <li><%= link_to 'Billing Address'    , settings_billing_path , :rel => "nofollow" %></li>
+              <li><%= link_to 'Teams'              , settings_teams_path   , :rel => "nofollow" %></li>
             <% end %>
 
             <% if !Rails.env.enterprise? || current_user.fetch_or_create_permissions.lwl == true %>
