--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -154,7 +154,7 @@
           <% end %>
           <% if project_member?( @project, current_user ) %>
             <li>
-              <a data-target="#collaborators" data-toggle="tab" onclick="page_view('ga_project_collaborators')"><i class = "fa fa-users">&nbsp;</i>Collaborators</a>
+              <a data-target="#collaborators" data-toggle="tab" onclick="page_view('ga_project_collaborators')"><i class = "fa fa-users">&nbsp;</i>Teams</a>
             </li>
             <li>
               <a data-target="#settings" data-toggle="tab" onclick="page_view('ga_project_settings')"><i class = "fa fa-cogs">&nbsp;</i>Settings </a>
