--- a/app/views/shared/_dialog_dependency_badge.html.erb
+++ b/app/views/shared/_dialog_dependency_badge.html.erb
@@ -56,11 +56,11 @@
           image_url = purl + "/badge.svg?style=flat";
           url       = purl
           <% if @product && !@product.version.to_s.empty? %>
-            image_url = "<%= product_version_badge_url(:lang => @product.language_esc, :key => @product.to_param, :version => Version.encode_version(@product.version) ) %>" + ".svg";
+            image_url = "<%= product_version_badge_url(:lang => @product.language_esc, :key => @product.to_param, :version => Version.encode_version(@product.version) ) %>" + "?style=flat";
             url = "<%= package_version_url(:lang => @product.language_esc, :key => @product.to_param, :version => Version.encode_version(@product.version)) %>";
           <% end %>
           <% if @product && @product.version.to_s.empty? %>
-            image_url = "<%= product_badge_url(:lang => @product.language_esc, :key => @product.to_param ) %>" + ".svg";
+            image_url = "<%= product_badge_url(:lang => @product.language_esc, :key => @product.to_param ) %>" + "?style=flat";
             url = "<%= products_url( :lang => @product.language_esc, :key => @product.to_param ) %>";
           <% end %>
 
