--- a/app/views/organisations/index.html.erb
+++ b/app/views/organisations/index.html.erb
@@ -11,7 +11,7 @@
   <div class="content" >
 
     <div class="scm_repo">
-      <a href="<%= new_organisation_path %>">Create a new Organisation</a>
+      <a href="<%= new_organisation_path %>">Create new organisation</a>
     </div>
 
     <% @organisations.each do |orga| %>
