--- a/app/views/organisations/_navi.html.erb
+++ b/app/views/organisations/_navi.html.erb
@@ -1,4 +1,27 @@
 
-  <div class="boxContainer" >
-    navi
+<div class="navbar navbar-default" >
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#settings_menu" aria-expanded="false">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
   </div>
+
+  <div class="collapse navbar-collapse" id="orga_menu">
+    <div class="navi nav-stacked" >
+      <% if signed_in? %>
+        <ul class = "nav nav-pills nav-stacked">
+          <li><%= link_to 'Profile', organisation_path(@organisation) %></li>
+          <li>Teams</li>
+          <li>License Whitelists</li>
+          <li>Component Whitelists</li>
+        </ul>
+      <% else %>
+        <%= render '/shared/signup_ad' %>
+      <% end %>
+    </div>
+  </div>
+
+</div>
