--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,6 +1,6 @@
 
 <div class="col-md-3" >
-  <%= render 'settings/navi' %>
+  <%= render 'organisations/navi' %>
 </div>
 
 <div class="col-md-9" >
@@ -16,7 +16,7 @@
     </p>
 
 
-    <%= form_tag( settings_teams_add_path(:id => @team.ids),  class: 'form-group', style: 'vertical-align:top;' ) do %>
+    <%= form_tag( add_organisation_team_path(@organisation, @team),  class: 'form-group', style: 'vertical-align:top;' ) do %>
       <div class="input-append">
         <input id="collaborator_username" name="username" class="typeahead  form-control" type="text" autofocus="autofocus" autocomplete="off" style="width: 400px; margin-top: -5px; display: inline-block;" />
         <button class="btn btn-primary" onclick="preventSubmit('collaborator_username', 'collaborator username')" type="submit" >
@@ -33,9 +33,9 @@
         <col width="*" />
       </colgroup>
       <tbody>
-        <% @team.team_members.each do |member| %>
+        <% @team.members.each do |member| %>
           <% next if member.user.nil? %>
-          <%= form_tag( settings_teams_remove_path(:id => @team.ids, :username => member.user.username), :method => "post") do  %>
+          <%= form_tag( remove_organisation_team_path(@organisation, @team, :username => member.user.username), :method => "post") do  %>
           <tr >
             <td >
               <button type="submit" class="btn btn-danger" onClick="return confirmAction()" >Delete</button>
