--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -6,7 +6,7 @@
 <div class="col-md-9" >
 
   <div class="content_header_def" >
-    Teams
+    Teams at <%= @organisation.name %>
   </div>
 
   <div class="content" >
